removed downloaded file for download button

--- a/index.html
+++ b/index.html
@@ -68,52 +68,52 @@
             <div class="item">
               <div class="item-lang">English</div>
               <div class="smalltext-lang">&nbsp;</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">Deutsch</div>
               <div class="smalltext-lang">German</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">Italiano</div>
               <div class="smalltext-lang">Italian</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">Español</div>
               <div class="smalltext-lang">Spanish</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">français</div>
               <div class="smalltext-lang">French</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">Português brasileiro</div>
               <div class="smalltext-lang">Brazilian Portuguese</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">日本</div>
               <div class="smalltext-lang">Japanese</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">한국어</div>
               <div class="smalltext-lang">Korean</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">中国</div>
               <div class="smalltext-lang">Chinese</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
             <div class="item">
               <div class="item-lang">中國</div>
               <div class="smalltext-lang">Traditional Chinese</div>
-              <button class="btn-small"><a href="ue_english_64.exe">Download 64-bit</a></button>
+              <button class="btn-small"><a href="\">Download 64-bit</a></button>
             </div>
         </div>
       </section>
