media query adjustments for nav and grid

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
         <div class="menu">
           <ul>
-            <li>Products <img src="downarrow.png" alt="" /></li>
-            <li>For business <img src="downarrow.png" alt="" /></li>
-            <li>Resources <img src="downarrow.png" alt="" /></li>
-            <li>Support <img src="downarrow.png" alt="" /></li>
-            <li>Our company <img src="downarrow.png" alt="" /></li>
-            <li>
+            <li class="nav-list">Products <img src="downarrow.png" alt="" /></li>
+            <li class="nav-list">For business <img src="downarrow.png" alt="" /></li>
+            <li class="nav-list">Resources <img src="downarrow.png" alt="" /></li>
+            <li class="nav-list">Support <img src="downarrow.png" alt="" /></li>
+            <li class="nav-list">Our company <img src="downarrow.png" alt="" /></li>
+            <li class="nav-list">
               <img
                 id="lang-icon"
                 src="Lang.png"
@@ -32,6 +32,9 @@
           </ul>
           <div class="search">
             <img src="search.png" alt="" />
+          </div>
+          <div class="hamburger">
+            <img src="hamburger.png" alt="">
           </div>
         </div>
       </nav>
